[gd_scene load_steps=55 format=3 uid="uid://csyf614fi1bwu"]

[ext_resource type="Script" uid="uid://dy2qgmxw3m4uq" path="res://selec_personaje.gd" id="1_6tvf1"]
[ext_resource type="FontFile" uid="uid://cjy11xjo0p2xe" path="res://Fonts/ldfcomicsans-font/Ldfcomicsans-jj7l.ttf" id="4_l8r70"]
[ext_resource type="Texture2D" uid="uid://vbgpc8ntuntf" path="res://Texture/Playable Characters/Character sprite/Knight/Knight-Idle.png" id="4_wew3n"]
[ext_resource type="Texture2D" uid="uid://dpynry271fibe" path="res://Texture/Playable Characters/Character sprite/Barbarian/Armored Axeman-Idle.png" id="5_vnd7b"]
[ext_resource type="Texture2D" uid="uid://c73ymqivr0hrj" path="res://Texture/Playable Characters/Character sprite/Archer/Archer-Idle.png" id="6_tjsw6"]
[ext_resource type="Texture2D" uid="uid://dkj3kmaaw02pm" path="res://Texture/Playable Characters/Character sprite/Wizard/Wizard-Idle.png" id="7_r1l1w"]
[ext_resource type="Texture2D" uid="uid://c2tsa4mu2lfvt" path="res://Characters/Misc/finger.png" id="8_ylugc"]
[ext_resource type="PackedScene" uid="uid://cylangw0sb7mt" path="res://transitions/transtion.tscn" id="9_njgpy"]
[ext_resource type="Texture2D" uid="uid://dq00nbal7vmmg" path="res://Texture/Playable Characters/Character sprite/Knight/Knight-Walk.png" id="10_arv7g"]
[ext_resource type="Texture2D" uid="uid://65jtucyr84ki" path="res://Texture/Playable Characters/Character sprite/Barbarian/Armored Axeman-Walk.png" id="11_iq0s6"]
[ext_resource type="Texture2D" uid="uid://b3isk0q4e5v1f" path="res://Texture/Playable Characters/Character sprite/Archer/Archer-Walk.png" id="12_xcuc2"]
[ext_resource type="Texture2D" uid="uid://car6d7bpnky3c" path="res://Texture/Playable Characters/Character sprite/Wizard/Wizard-Walk.png" id="13_s7wj6"]

[sub_resource type="Animation" id="Animation_qdv7c"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("finger:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("finger:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.58825]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("finger:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(162, 165)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("confirmacion:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Si:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("No:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_3b65o"]
resource_name = "selection1"
length = 1.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("finger:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("finger:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.58825]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("finger:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.366667, 0.7, 1.03333, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(162, 165), Vector2(162, 175), Vector2(162, 190), Vector2(162, 175), Vector2(162, 165)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("confirmacion:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Si:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("No:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_tsh8i"]
resource_name = "selection2"
length = 1.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("finger:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("finger:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.58825]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("finger:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.366667, 0.7, 1.03333, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(440, 165), Vector2(440, 175), Vector2(440, 190), Vector2(440, 175), Vector2(440, 165)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("confirmacion:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Si:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("No:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_2xd5u"]
resource_name = "selection3"
length = 1.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("finger:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("finger:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.58825]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("finger:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.366667, 0.7, 1, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(710, 165), Vector2(710, 175), Vector2(710, 190), Vector2(710, 175), Vector2(710, 165)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("confirmacion:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Si:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("No:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_iknn4"]
resource_name = "selection4"
length = 1.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("finger:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("finger:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.58825]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("finger:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.366667, 0.7, 1, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(990, 165), Vector2(990, 175), Vector2(990, 190), Vector2(990, 175), Vector2(990, 165)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("confirmacion:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Si:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("No:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1j2he"]
_data = {
&"RESET": SubResource("Animation_qdv7c"),
&"selection1": SubResource("Animation_3b65o"),
&"selection2": SubResource("Animation_tsh8i"),
&"selection3": SubResource("Animation_2xd5u"),
&"selection4": SubResource("Animation_iknn4")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_f6qxv"]
atlas = ExtResource("10_arv7g")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_drsff"]
atlas = ExtResource("10_arv7g")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_cp74y"]
atlas = ExtResource("10_arv7g")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_lfley"]
atlas = ExtResource("10_arv7g")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_07die"]
atlas = ExtResource("10_arv7g")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_2eqfd"]
atlas = ExtResource("10_arv7g")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuuko"]
atlas = ExtResource("10_arv7g")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_p8y6e"]
atlas = ExtResource("10_arv7g")
region = Rect2(700, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_v1p4q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f6qxv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_drsff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cp74y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lfley")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_07die")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2eqfd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuuko")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p8y6e")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_libro"]
atlas = ExtResource("11_iq0s6")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_60ta3"]
atlas = ExtResource("11_iq0s6")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_lqs87"]
atlas = ExtResource("11_iq0s6")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3xir"]
atlas = ExtResource("11_iq0s6")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_jwmnm"]
atlas = ExtResource("11_iq0s6")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_r0fqi"]
atlas = ExtResource("11_iq0s6")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_lalbp"]
atlas = ExtResource("11_iq0s6")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_k67q6"]
atlas = ExtResource("11_iq0s6")
region = Rect2(700, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_lgvhl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_libro")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60ta3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lqs87")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3xir")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jwmnm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r0fqi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lalbp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k67q6")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_u57yl"]
atlas = ExtResource("12_xcuc2")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_8od43"]
atlas = ExtResource("12_xcuc2")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_mwuwe"]
atlas = ExtResource("12_xcuc2")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_cs8ey"]
atlas = ExtResource("12_xcuc2")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ue6m8"]
atlas = ExtResource("12_xcuc2")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_53n3h"]
atlas = ExtResource("12_xcuc2")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_00gx6"]
atlas = ExtResource("12_xcuc2")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_nbqtw"]
atlas = ExtResource("12_xcuc2")
region = Rect2(700, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_0vad6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u57yl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8od43")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mwuwe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs8ey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ue6m8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_53n3h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_00gx6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nbqtw")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_c4fws"]
atlas = ExtResource("13_s7wj6")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_tn2m3"]
atlas = ExtResource("13_s7wj6")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_25g3u"]
atlas = ExtResource("13_s7wj6")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ceiog"]
atlas = ExtResource("13_s7wj6")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ratec"]
atlas = ExtResource("13_s7wj6")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6svx"]
atlas = ExtResource("13_s7wj6")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_06wnd"]
atlas = ExtResource("13_s7wj6")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_wgqab"]
atlas = ExtResource("13_s7wj6")
region = Rect2(700, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_saq6w"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c4fws")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tn2m3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_25g3u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ceiog")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ratec")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6svx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_06wnd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wgqab")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Selector" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6tvf1")

[node name="Transtion" parent="." instance=ExtResource("9_njgpy")]
tipo_de_animacion = "Fade out"

[node name="TextureRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1148.0
offset_bottom = 649.0
color = Color(0.0346092, 0.0216063, 0.0123178, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 319.0
offset_top = -6.0
offset_right = 1388.0
offset_bottom = 100.0
scale = Vector2(0.560951, 0.848894)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_l8r70")
theme_override_font_sizes/font_size = 90
text = "Seleccione su personaje"

[node name="Personaje1" type="Button" parent="."]
layout_mode = 0
offset_left = 195.0
offset_top = 106.0
offset_right = 360.0
offset_bottom = 340.0
scale = Vector2(0.696999, 0.485789)
expand_icon = true

[node name="linea" type="Line2D" parent="Personaje1"]
position = Vector2(-123, -230)
scale = Vector2(1.22891, 1)
points = PackedVector2Array(92, 228, 164.046, 228, 238, 228, 238, 462, 207.8, 462, 162.418, 462, 96, 462, 96, 229)
default_color = Color(0, 0, 0, 1)

[node name="Sprite2D" type="Sprite2D" parent="Personaje1"]
position = Vector2(119.082, 119.393)
scale = Vector2(5.79896, 8.29425)
texture = ExtResource("4_wew3n")
hframes = 5

[node name="Personaje2" type="Button" parent="."]
layout_mode = 0
offset_left = 412.0
offset_top = 104.0
offset_right = 577.0
offset_bottom = 338.0
scale = Vector2(0.707862, 0.500005)
expand_icon = true

[node name="linea2" type="Line2D" parent="Personaje2"]
position = Vector2(-123, -230)
scale = Vector2(1.22891, 1)
points = PackedVector2Array(92, 228, 164.046, 228, 238, 228, 238, 462, 207.8, 462, 162.418, 462, 96, 462, 96, 229)
default_color = Color(0, 0, 0, 1)

[node name="Barbarian" type="Sprite2D" parent="Personaje2"]
position = Vector2(131, 132)
scale = Vector2(5.92083, 6.485)
texture = ExtResource("5_vnd7b")
hframes = 5

[node name="Personaje3" type="Button" parent="."]
layout_mode = 0
offset_left = 644.0
offset_top = 103.0
offset_right = 809.0
offset_bottom = 337.0
scale = Vector2(0.732055, 0.498807)
expand_icon = true

[node name="linea3" type="Line2D" parent="Personaje3"]
position = Vector2(-123, -230)
scale = Vector2(1.22891, 1)
points = PackedVector2Array(92, 228, 164.046, 228, 238, 228, 238, 462, 207.8, 462, 162.418, 462, 96, 462, 96, 229)
default_color = Color(0, 0, 0, 1)

[node name="Archer" type="Sprite2D" parent="Personaje3"]
position = Vector2(131, 132)
scale = Vector2(5.92083, 6.485)
texture = ExtResource("6_tjsw6")
hframes = 5

[node name="Personaje4" type="Button" parent="."]
layout_mode = 0
offset_left = 871.0
offset_top = 101.0
offset_right = 1036.0
offset_bottom = 335.0
scale = Vector2(0.739143, 0.508327)
expand_icon = true

[node name="linea4" type="Line2D" parent="Personaje4"]
position = Vector2(-123, -230)
scale = Vector2(1.22891, 1)
points = PackedVector2Array(92, 228, 164.046, 228, 238, 228, 238, 462, 207.8, 462, 162.418, 462, 96, 462, 96, 229)
default_color = Color(0, 0, 0, 1)

[node name="Wizard" type="Sprite2D" parent="Personaje4"]
position = Vector2(131, 132)
scale = Vector2(5.92083, 6.485)
texture = ExtResource("7_r1l1w")
hframes = 5

[node name="finger" type="Sprite2D" parent="."]
visible = false
position = Vector2(162, 165)
rotation = 1.58825
scale = Vector2(0.602222, 0.548889)
texture = ExtResource("8_ylugc")

[node name="confirmacion" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 27.0
offset_top = 246.0
offset_right = 1952.0
offset_bottom = 346.0
scale = Vector2(0.584711, 1.03208)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_l8r70")
theme_override_font_sizes/font_size = 80
text = "Desea usar este personaje?"

[node name="Si" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 398.0
offset_top = 517.0
offset_right = 487.0
offset_bottom = 625.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_l8r70")
theme_override_font_sizes/font_size = 80
text = "Si"
flat = true

[node name="No" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 640.0
offset_top = 514.0
offset_right = 748.0
offset_bottom = 602.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_l8r70")
theme_override_font_sizes/font_size = 80
text = "No"
flat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_1j2he")
}

[node name="cleaner" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Knight" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(152, 482)
scale = Vector2(7.60505, 7.71163)
sprite_frames = SubResource("SpriteFrames_v1p4q")

[node name="Barbarian" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(136, 492)
scale = Vector2(8.31274, 8.05623)
sprite_frames = SubResource("SpriteFrames_lgvhl")
frame_progress = 0.276837

[node name="Archer" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(136, 482)
scale = Vector2(8.33224, 8.46975)
sprite_frames = SubResource("SpriteFrames_0vad6")

[node name="Wizard" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(136, 476)
scale = Vector2(7.74933, 8.20543)
sprite_frames = SubResource("SpriteFrames_saq6w")

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="button_down" from="Personaje1" to="." method="_on_personaje_1_button_down"]
[connection signal="pressed" from="Personaje1" to="." method="_on_personaje_1_pressed"]
[connection signal="pressed" from="Personaje2" to="." method="_on_personaje_2_pressed"]
[connection signal="pressed" from="Personaje3" to="." method="_on_personaje_3_pressed"]
[connection signal="pressed" from="Personaje4" to="." method="_on_personaje_4_pressed"]
[connection signal="pressed" from="Si" to="." method="_on_si_pressed"]
[connection signal="pressed" from="No" to="." method="_on_no_pressed"]
[connection signal="timeout" from="cleaner" to="." method="_on_cleaner_timeout"]
